--- a/main.html
+++ b/main.html
@@ -32,11 +32,15 @@
         </div>
     </section>
     <section class="about" id="about">
-        <div class="about-content">
-            <div class="about-text">
-                <h2>A propos de moi</h2>
-                <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
-                <a href="#" class="btn">Télécharger CV</a>
+        <div class="about-img">
+            <img src="./images/20241105_130556.jpg" alt="photo">
+        </div>
+        <div class="about-text">
+            <h2>A propos de <span>moi</span> </h2>
+            <h4>Recherche un stage en dévelopemment web</h4>
+            <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
+            <a href="#about" class="btn-box" onclick="DownloadPDF()">Télécharger CV</a>
+        </div>
     </section>
     <section class="skils" id="skills"></section>
     <section class="projects" id="projects"></section>
