--- a/main.html
+++ b/main.html
@@ -42,7 +42,36 @@
             <a href="#about" class="btn-box" onclick="DownloadPDF()">Télécharger CV</a>
         </div>
     </section>
-    <section class="skils" id="skills"></section>
+    <section>
+        <div class="skills" id="skills">
+            <div class="container">
+                <h1 class="sub-title">Mes <span>compétences</span> </h1>
+                <div class="skills-list">
+                    <div>
+                        <i class='bx bx-code-alt' style='color:#96d1d1'></i>
+                        <h2>Dévelopemment web</h2>
+                        <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
+                            également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
+                            <a href="#" class="read">Voir plus</a>
+                    </div>
+                    <div>
+                        <i class='bx bxs-data' style='color:#96d1d1' ></i>
+                        <h2>Dévelopemment web</h2>
+                        <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
+                            également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
+                            <a href="#" class="read">Voir plus</a>
+                    </div>
+                    <div>
+                        <i class='bx bx-git-branch' style='color:#96d1d1' ></i>
+                        <h2>Dévelopemment web</h2>
+                        <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
+                            également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
+                            <a href="#" class="read">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+        </div>       
+    </section>
     <section class="projects" id="projects"></section>
     <section class="contact" id="contact"></section>
     <script src="main.js"></script>
