--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a href="#" style="--i:1" class="active">Accueil</a>
             <a href="#about" style="--i:2">A propos</a>
-            <a href="#skills" style="--i:3">Compétences</a>
+            <a href="#skill" style="--i:3">Compétences</a>
             <a href="#projects" style="--i:4">Projets</a>
             <a href="#contacts" style="--i:5">Contact</a>
         </nav>
@@ -42,28 +42,31 @@
             <a href="#about" class="btn-box" onclick="DownloadPDF()">Télécharger CV</a>
         </div>
     </section>
-    <section>
+    <section class="skill" id="skill">
         <div class="skills" id="skills">
             <div class="container">
                 <h1 class="sub-title">Mes <span>compétences</span> </h1>
                 <div class="skills-list">
-                    <div>
+                    <div id="2"  onclick="DisplayBack()">
                         <i class='bx bx-code-alt' style='color:#96d1d1'></i>
                         <h2>Dévelopemment web</h2>
                         <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
                             également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
                             <a href="#" class="read">Voir plus</a>
                     </div>
+                    <div class="back-card" id="1" onclick="Refresh()">
+                        <p>back card</p>
+                    </div>
                     <div>
                         <i class='bx bxs-data' style='color:#96d1d1' ></i>
-                        <h2>Dévelopemment web</h2>
+                        <h2>Base de données</h2>
                         <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
                             également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
                             <a href="#" class="read">Voir plus</a>
                     </div>
                     <div>
                         <i class='bx bx-git-branch' style='color:#96d1d1' ></i>
-                        <h2>Dévelopemment web</h2>
+                        <h2>Gestion de projets</h2>
                         <p>Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
                             également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
                             <a href="#" class="read">Voir plus</a>
