change index color

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         }
         h1 {
             font-size: 50px;
-            color: #333;
+            color: #ffffff;
         }
         p {
             font-size: 20px;
-            color: #666;
+            color: #ffffff;
         }
     </style>
 </head>
