final project part + start contact part

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
             <a href="#" style="--i:1" class="active">Accueil</a>
             <a href="#about-start" style="--i:2">A propos</a>
             <a href="#skill" style="--i:3">Compétences</a>
-            <a href="#projects" style="--i:4">Projets</a>
+            <a href="#projects-start" style="--i:4">Projets</a>
             <a href="#contacts" style="--i:5">Contact</a>
         </nav>
     </header>
@@ -85,8 +85,68 @@
             </div>
         </div>       
     </section>
-    <section class="projects" id="projects"></section>
-    <section class="contact" id="contact"></section>
+    <div id="projects-start"></div>
+    <section>
+        <div id="portfolio" id="project">
+            <div class="main-text" id="project">
+                <h2>Mes <span>projets</span></h2>
+                <div class="portfolio-content">
+                    <div class="row">
+                        <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                        <div class="layer">
+                            <h5>Tiki-Taka-Toe</h5>
+                            <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
+                            <a href="#"><i class="bx bx-plus-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                        <div class="layer">
+                            <h5>Tiki-Taka-Toe</h5>
+                            <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
+                            <a href="#"><i class="bx bx-link-external"></i></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                        <div class="layer">
+                            <h5>Tiki-Taka-Toe</h5>
+                            <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
+                            <a href="#"><i class="bx bx-link-external"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <div class="contact-text">
+            <h2>Contactez-<span>moi</span></h2>
+            <h4>Lets work together</h4>
+            <p>fergergerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrbv egergerg grerg erg 
+                 erg ergreg ergerg
+            </p>
+            <div class="contact-list">
+                <li><i class='bx bxs-send'></i>lechatnoe@gmail.com</li>
+                <li><i class='bx bxs-phone'></i>06 45 04 87 62</li>
+            </div>
+            <div class="contact-icons">
+                <a href=""><i class='bx bxl-linkedin'></i></a>
+                <a href=""><i class='bx bxl-github'></i></a>
+                <a href=""><i class='bx bxl-instagram'></i></a>
+            </div>
+        </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="" placeholder="Nom et prénom" required>
+                <input type="email" placeholder="Email" required>
+
+                <input type="" placeholder="Objet">
+                <textarea name="" id="" cols="40" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="submit" class="send">
+            </form>
+        </div>
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
