finish contact part and footer

--- a/main.html
+++ b/main.html
@@ -12,14 +12,14 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
         <nav class="navbar">
-            <a href="#" style="--i:1" class="active">Accueil</a>
-            <a href="#about-start" style="--i:2">A propos</a>
+            <a href="#home" style="--i:1" class="active">Accueil</a>
+            <a href="#about" style="--i:2">A propos</a>
             <a href="#skill" style="--i:3">Compétences</a>
-            <a href="#projects-start" style="--i:4">Projets</a>
-            <a href="#contacts" style="--i:5">Contact</a>
+            <a href="#portfolio" style="--i:4">Projets</a>
+            <a href="#contact" style="--i:5">Contact</a>
         </nav>
     </header>
-    <section class="home">
+    <section class="home" id="home ">
         <div class="home-content">
             <h3>Bonjour, je m'appelle</h3>
             <h1>Noé LECHAT</h1>
@@ -28,10 +28,10 @@
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/noé-lechat-175b90265" style="--i:6"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://github.com/lechatn" style="--i:7"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.instagram.com/noe_lechat/" style="--i:8"><i class='bx bxl-instagram' ></i></a>
             </div>
         </div>
     </section>
-    <div id="about-start"></div>
     <section class="about" id="about">
         <div class="about-img">
             <img src="./images/20241105_130556.jpg" alt="photo">
@@ -84,8 +84,7 @@
                 </div>
             </div>
         </div>       
-    </section>
-    <div id="projects-start"></div>
+    </section>    
     <section>
         <div id="portfolio" id="project">
             <div class="main-text" id="project">
@@ -115,6 +114,14 @@
                             <a href="#"><i class="bx bx-link-external"></i></a>
                         </div>
                     </div>
+                    <div class="row">
+                        <img src="./images/tiki-taka-toe.jpg" alt="tiki-taka-toe">
+                        <div class="layer">
+                            <h5>Tiki-Taka-Toe</h5>
+                            <p>description du projet : Pro verververver gerbrtbev dsgersg fqdeger jhdsdvcnqs f acdsgndsv beregsqdhsqnfsv,dnbvegzcsdgfz</p>
+                            <a href="#"><i class="bx bx-link-external"></i></a>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -147,6 +154,10 @@
             </form>
         </div>
     </section>
+    <div class="last-text">
+        <p>Développé par Noé Lechat © 2024</p>
+    </div>
+    <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
     <script src="main.js"></script>
 </body>
 </html>
