finish contact part and footer

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
     </header>
-    <section class="home" id="home ">
+    <section class="home" id="home">
         <div class="home-content">
             <h3>Bonjour, je m'appelle</h3>
             <h1>Noé LECHAT</h1>
@@ -32,7 +32,8 @@
             </div>
         </div>
     </section>
-    <section class="about" id="about">
+    <article id="about"></article>
+    <section class="about"">
         <div class="about-img">
             <img src="./images/20241105_130556.jpg" alt="photo">
         </div>
