--- a/main.html
+++ b/main.html
@@ -130,10 +130,7 @@
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2>Contactez-<span>moi</span></h2>
-            <h4>Lets work together</h4>
-            <p>fergergerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrbv egergerg grerg erg 
-                 erg ergreg ergerg
-            </p>
+            <p>Si vous avez la moindre question, n'hésitez pas à me contacter via mes réseaux sociaux ou en complètant ce formulaire!</p>
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i>lechatnoe@gmail.com</li>
                 <li><i class='bx bxs-phone'></i>06 45 04 87 62</li>
@@ -145,20 +142,21 @@
             </div>
         </div>
         <div class="contact-form">
-            <form action="">
-                <input type="" placeholder="Nom et prénom" required>
-                <input type="email" placeholder="Email" required>
+            <form id="contact-form" action="https://formspree.io/f/meoqkygz" method="POST">
+                <input type="text" name="name" placeholder="Nom et prénom" required>
+                <input type="email" name="email" placeholder="Email" required>
 
-                <input type="" placeholder="Objet">
-                <textarea name="" id="" cols="40" rows="10" placeholder="Message"></textarea>
+                <input type="text" name="object" placeholder="Objet">
+                <textarea name="message" id="" cols="40" rows="10" placeholder="Message"></textarea>
                 <input type="submit" value="submit" class="send">
             </form>
         </div>
     </section>
-    <div class="last-text">
+    <footer>
         <p>Développé par Noé Lechat © 2024</p>
-    </div>
+    </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
+    <div id="alert-container"></div>
     <script src="main.js"></script>
 </body>
 </html>
