--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#home" class="logo">Portfolio</a>
         <nav class="navbar">
-            <a href="#home" style="--i:1" class="active">Accueil</a>
-            <a href="#about" style="--i:2">A propos</a>
-            <a href="#skill" style="--i:3">Compétences</a>
-            <a href="#portfolio" style="--i:4">Projets</a>
-            <a href="#contact" style="--i:5">Contact</a>
+            <a href="#home" id="nav-home" style="--i:1" class="active">Accueil</a>
+            <a href="#about" id="nav-about" style="--i:2">A propos</a>
+            <a href="#skill" id="nav-skill" style="--i:3">Compétences</a>
+            <a href="#portfolio" id="nav-portfolio" style="--i:4">Projets</a>
+            <a href="#contact" id="nav-contact" style="--i:5">Contact</a>
         </nav>
     </header>
     <section class="home" id="home">
@@ -130,7 +130,9 @@
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2>Contactez-<span>moi</span></h2>
-            <p>Si vous avez la moindre question, n'hésitez pas à me contacter via mes réseaux sociaux ou en complètant ce formulaire!</p>
+            <h5>Si vous avez la moindre question, n'hésitez pas à me contacter via mes réseaux sociaux ou en complètant ce formulaire!</h5>
+            <p>Les informations recueillies via ce formulaire sont utilisées uniquement pour répondre à votre demande. Elles ne seront jamais partagées avec des tiers sans votre consentement. 
+                Conformément au RGPD, vous avez un droit d'accès, de modification, et de suppression de vos données.</p>
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i>lechatnoe@gmail.com</li>
                 <li><i class='bx bxs-phone'></i>06 45 04 87 62</li>
